[gd_scene load_steps=32 format=3 uid="uid://sg00ko55vk0j"]

[ext_resource type="Script" uid="uid://c45cek6xk5a8k" path="res://ShmupSandbox/Player/Scripts/bomb_fuzz.gd" id="1_qcojm"]
[ext_resource type="Texture2D" uid="uid://dbeupq0f7bleb" path="res://ShmupSandbox/Assets/PlayerPowerupShots/bomb_attack-v2.png" id="3_gx8rc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gkeql"]
radius = 150.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qcojm"]
atlas = ExtResource("3_gx8rc")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx8rc"]
atlas = ExtResource("3_gx8rc")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0frw"]
atlas = ExtResource("3_gx8rc")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_etgqy"]
atlas = ExtResource("3_gx8rc")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dth6w"]
atlas = ExtResource("3_gx8rc")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmnqh"]
atlas = ExtResource("3_gx8rc")
region = Rect2(640, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb1n8"]
atlas = ExtResource("3_gx8rc")
region = Rect2(768, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o842k"]
atlas = ExtResource("3_gx8rc")
region = Rect2(896, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uokf"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1024, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8vd5"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1152, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hkvf"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1280, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kvxb"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1408, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjsqd"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1536, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1u8k"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1664, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecjlc"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1792, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_efi2f"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1920, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrp6j"]
atlas = ExtResource("3_gx8rc")
region = Rect2(1920, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jexxd"]
atlas = ExtResource("3_gx8rc")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpo6i"]
atlas = ExtResource("3_gx8rc")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pmfp"]
atlas = ExtResource("3_gx8rc")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k00oo"]
atlas = ExtResource("3_gx8rc")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fku4u"]
atlas = ExtResource("3_gx8rc")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dgc1"]
atlas = ExtResource("3_gx8rc")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ct1m"]
atlas = ExtResource("3_gx8rc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjv1m"]
atlas = ExtResource("3_gx8rc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0ue5"]
atlas = ExtResource("3_gx8rc")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x4fa"]
atlas = ExtResource("3_gx8rc")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0frw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcojm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx8rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0frw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etgqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dth6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmnqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb1n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o842k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uokf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8vd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hkvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kvxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjsqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1u8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecjlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efi2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrp6j")
}],
"loop": false,
"name": &"explode",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jexxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpo6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pmfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k00oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fku4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dgc1")
}],
"loop": true,
"name": &"fly",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ct1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjv1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0ue5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x4fa")
}],
"loop": false,
"name": &"spawn",
"speed": 30.0
}]

[node name="bomb_fuzz" type="Area2D"]
z_index = 2
collision_layer = 64
collision_mask = 0
monitoring = false
script = ExtResource("1_qcojm")
speed = 300.0
detonation_time = 1.5

[node name="bomb_collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gkeql")
debug_color = Color(0.842575, 0.813215, 0.7766, 0.42)

[node name="bomb_sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.2, 2.2)
sprite_frames = SubResource("SpriteFrames_a0frw")
animation = &"spawn"
autoplay = "spawn"

[node name="detonation_timer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(176, 0)

[connection signal="timeout" from="detonation_timer" to="." method="_on_detonation_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
